Third Commit added some css

--- a/index.html
+++ b/index.html
@@ -25,15 +25,26 @@
     <!-- The login section is for users to login to their accounts, the create user input fields are for creating new users, once the user logs in the login screen will be hidden-->
     <section class="login">
       <div class="log-user">
-        <input id="username" placeholder="Username" />
-        <input id="password" placeholder="Password" />
+        <h2>Login</h2>
+        <h3>Client Username</h3>
+        <input id="username" />
+        <h3>Password</h3>
+        <input id="password" />
         <button id="login-submit">Submit</button>
+        <h4>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
+          necessitatibus illo inventore autem consequatur animi, hic architecto
+          dicta? Magnam, saepe?Lorem ipsum, dolor sit amet consectetur
+          adipisicing elit. Corrupti laborum dolore vero sit rerum odio omnis
+          nesciunt impedit et tempora magnam ipsum perferendis, temporibus
+          quisquam doloribus? Consectetur aperiam voluptate ab.
+        </h4>
       </div>
-      <div class="create">
+      <!-- <div class="create">
         <input id="create-user" />
         <input id="create-pass" />
         <button id="create-submit">Submit</button>
-      </div>
+      </div> -->
     </section>
     <script src="script.js" async defer></script>
   </body>
