4th Commit, added some CSS for the login menu

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     </section>
     <!-- The login section is for users to login to their accounts, the create user input fields are for creating new users, once the user logs in the login screen will be hidden-->
     <section class="login">
+      <img id="login-image" src="./assets/images/login-image.jpg" />
+      <h1>A Bank for the People by the People</h1>
       <div class="log-user">
         <h2>Login</h2>
         <h3>Client Username</h3>
